# clodxy

./: .gitignore  README.md  clodxy.sh  config.example.json  pyproject.toml
clodxy/: cli.py  main.py  translate.py
clodxy/config/: __init__.py
completions/: clodxy.fish
