[project]
name = "clodxy"
version = "0.1.0"
description = "Claude Code to OpenAI-compatible API proxy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dacite>=1.9.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.11",
]

[project.scripts]
clodxy = "clodxy.cli:main"

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py312"
